<resources>
    <string name="app_name">MyCalexample</string>

        <string name="action_settings">Settings</string>
        <string name="ButtonOne">1</string>
        <string name="ButtonTwo">2</string>
        <string name="ButtonThree">3</string>
        <string name="ButtonFour">4</string>
        <string name="ButtonFive">5</string>
        <string name="ButtonSix">6</string>
        <string name="ButtonSeven">7</string>
        <string name="ButtonEight">8</string>
        <string name="ButtonNine">9</string>
        <string name="ButtonZero">0</string>
        <string name="ButtonClear">C</string>
        <string name="ButtonEquals">=</string>
        <string name="ButtonPlus">+</string>
        <string name="ButtonSubtract">-</string>
        <string name="ButtonMultiply">X</string>
        <string name="ButtonDivide">/</string>

    </resources>
